# incolumepy.infosaj

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
coverage_report/: cov.xml
docs/: api.rst  changelog-ref.rst  conf.py  development.md  index.rst  prefacio.md  usage.md
docs/examples/: EXAMPLES.rst
examples/: responsive_cards.html  responsive_flex_cards.html
incolumepy/infosaj/: Dockerfile  __init__.py  cli.py  compose.yml  infosaj.py
incolumepy/infosaj/css/: color.css  fonts.css  layout.css
incolumepy/infosaj/fonts/: styles.css
tests/: test_incolumepy_infosaj.py  test_incolumepy_infosaj_infosaj.py
