[tool.poetry]
name = "incolumepy.infosaj"
version = "0.1.0"
description = "Gerador do Informativo SAJ em HTML."
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include = "incolumepy", from=""},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
pydocstyle = "^6.1.1"
pylint = "^2.13.5"
flake8 = "^4.0.1"
tox = "^3.24.5"
pytest-mock = "^3.7.0"
Sphinx = "^4.5.0"
furo = "^2022.4.7"
myst-parser = "^0.17.0"
mypy = "^0.942"
types-toml = "^0.10.4"
mypy-extensions = "^0.4.3"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
